--- a/index.html
+++ b/index.html
@@ -8,7 +8,65 @@
   <title>js kimetsu list</title>
 </head>
 <body>
-  <h1>Kimetsu no Yaiba</h1>
+  <div class="container">
+    <h1>Kimetsu no Yaiba API for Vanilla js</h1>
+    <div class="radio-list">
+      <ul>
+        <li>
+          <input type="radio" name="radio-group" value="all" id="all" checked>
+          <label for="all">全キャラクター</label>
+        </li>
+        <li>
+          <input type="radio" name="radio-group" value="kisatsutai" id="kisatsutai" checked>
+          <label for="kisatsutai">鬼殺隊</label>
+        </li>
+        <li>
+          <input type="radio" name="radio-group" value="hashira" id="hashira" checked>
+          <label for="hashira">柱</label>
+        </li>
+        <li>
+          <input type="radio" name="radio-group" value="oni" id="oni" checked>
+          <label for="oni">鬼</label>
+        </li>
+      </ul>
+    </div>
+    <div class="item">
+      <div class="item-loader active"></div>
+      <div class="item-list">
+        <ul>
+          <li>
+            <img src="https://ihatov08.github.io/kimetsu_api/images/tanjiro.jpg" alt="tanjiro">
+            <h3>炭治郎</h3>
+            <div class="item-list-category">
+              <p class="oni">カテゴリ</p>
+            </div>
+          </li>
+          <li>
+            <img src="https://ihatov08.github.io/kimetsu_api/images/tanjiro.jpg" alt="tanjiro">
+            <h3>炭治郎</h3>
+            <div class="item-list-category">
+              <p class="kisatsutai">カテゴリ</p>
+            </div>
+          </li>
+          <li>
+            <img src="https://ihatov08.github.io/kimetsu_api/images/tanjiro.jpg" alt="tanjiro">
+            <h3>炭治郎</h3>
+            <div class="item-list-category">
+              <p class="kisatsutai">カテゴリ</p>
+            </div>
+          </li>
+          <li>
+            <img src="https://ihatov08.github.io/kimetsu_api/images/tanjiro.jpg" alt="tanjiro">
+            <h3>炭治郎</h3>
+            <div class="item-list-category">
+              <p class="hashira">カテゴリ</p>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+  </div>
   <script type="module" src="./src/js/index.js"></script>
 </body>
 </html>
