feat:first view ok

--- a/index.html
+++ b/index.html
@@ -17,23 +17,24 @@
           <label for="all">全キャラクター</label>
         </li>
         <li>
-          <input type="radio" name="radio-group" value="kisatsutai" id="kisatsutai" checked>
+          <input type="radio" name="radio-group" value="kisatsutai" id="kisatsutai">
           <label for="kisatsutai">鬼殺隊</label>
         </li>
         <li>
-          <input type="radio" name="radio-group" value="hashira" id="hashira" checked>
+          <input type="radio" name="radio-group" value="hashira" id="hashira">
           <label for="hashira">柱</label>
         </li>
         <li>
-          <input type="radio" name="radio-group" value="oni" id="oni" checked>
+          <input type="radio" name="radio-group" value="oni" id="oni">
           <label for="oni">鬼</label>
         </li>
       </ul>
     </div>
     <div class="item">
-      <div class="item-loader active"></div>
-      <div class="item-list">
-        <ul>
+      <div id ="loading" class="item-loader active"></div>
+      <div id="item-list" class="item-list">
+        <!-- TODO: 最後必ず消すこと -->
+        <!-- <ul id="item-list-container">
           <li>
             <img src="https://ihatov08.github.io/kimetsu_api/images/tanjiro.jpg" alt="tanjiro">
             <h3>炭治郎</h3>
@@ -41,28 +42,7 @@
               <p class="oni">カテゴリ</p>
             </div>
           </li>
-          <li>
-            <img src="https://ihatov08.github.io/kimetsu_api/images/tanjiro.jpg" alt="tanjiro">
-            <h3>炭治郎</h3>
-            <div class="item-list-category">
-              <p class="kisatsutai">カテゴリ</p>
-            </div>
-          </li>
-          <li>
-            <img src="https://ihatov08.github.io/kimetsu_api/images/tanjiro.jpg" alt="tanjiro">
-            <h3>炭治郎</h3>
-            <div class="item-list-category">
-              <p class="kisatsutai">カテゴリ</p>
-            </div>
-          </li>
-          <li>
-            <img src="https://ihatov08.github.io/kimetsu_api/images/tanjiro.jpg" alt="tanjiro">
-            <h3>炭治郎</h3>
-            <div class="item-list-category">
-              <p class="hashira">カテゴリ</p>
-            </div>
-          </li>
-        </ul>
+        </ul> -->
       </div>
     </div>
 
